[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/gui/Theme.tres" type="Theme" id=1]
[ext_resource path="res://src/menus/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://src/menus/AudioSettings.tscn" type="PackedScene" id=3]

[node name="Settings" type="TextureRect"]
margin_left = 1440.0
margin_right = 1800.0
margin_bottom = 640.0
rect_min_size = Vector2( 360, 640 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Top" type="Panel" parent="."]
margin_right = 360.0
margin_bottom = 60.0

[node name="Bottom" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.0

[node name="Quit" type="Button" parent="."]
margin_left = 60.0
margin_top = 500.0
margin_right = 300.0
margin_bottom = 560.0
rect_min_size = Vector2( 240, 60 )
text = "QUIT"

[node name="AudioSettings" parent="." instance=ExtResource( 3 )]

[node name="Delete" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 320.0
margin_right = 300.0
margin_bottom = 465.0

[node name="SetDelete" type="CheckBox" parent="Delete"]
margin_right = 240.0
margin_bottom = 38.0
text = "Delete All Data?"

[node name="ConfirmDelete" type="Button" parent="Delete"]
margin_top = 42.0
margin_right = 240.0
margin_bottom = 78.0
rect_min_size = Vector2( 240, 0 )
text = "Confirm Deletion"

[node name="Label" type="Label" parent="Delete"]
margin_top = 82.0
margin_right = 240.0
margin_bottom = 112.0
rect_min_size = Vector2( 240, 0 )
text = "THIS cannot be undone!"
align = 1
autowrap = true
uppercase = true

[connection signal="toggled" from="Delete/SetDelete" to="." method="_on_SetDelete_toggled"]
[connection signal="pressed" from="Delete/ConfirmDelete" to="." method="_on_ConfirmDelete_pressed"]
